[metadata]
name = aws-cidr-finder
author = cooperwalbrun
author_email = mail@cooperwalbrun.io
description = A CLI tool for finding unused CIDR blocks in AWS VPCs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cooperwalbrun/aws-cidr-finder
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = =src
python_requires = >=3.10,<4
install_requires =
    boto3>=1.21,<2
    importlib-metadata
    tabulate>=0.8.9,<1

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    tox
github_actions =
    # Interpolation via %()s works because setuptools uses this: https://docs.python.org/3/library/configparser.html#configparser.BasicInterpolation
    %(testing)s
    tox-gh-actions
development =
    %(testing)s
    yapf

[options.entry_points]
console_scripts =
    aws-cidr-finder = aws_cidr_finder.__main__:main

[test]
# The line below tells setuptools whether to install everything listed under options.extras_require when you issue "python setup.py test"
extras = False

[tool:pytest]
addopts = --cov -p no:warnings
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# We do not support functionality on Python versions other than the ones specified in this file
universal = 0

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
